--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -57,7 +57,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:minHeight="48dp"
+        android:paddingTop="17dp"
+        android:paddingBottom="17dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp" />
 
