--- a/app/src/main/res/values/fonts.xml
+++ b/app/src/main/res/values/fonts.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="raleway_light">fonts/Raleway/Raleway-Light.ttf</string>
+    <string name="quicksand_light">fonts/quicksand/Quicksand-Light.otf</string>
+    <string name="quicksand_regular">fonts/quicksand/Quicksand-Regular.otf</string>
 </resources>
