--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     card_view:cardCornerRadius="@dimen/card_corner_radius"
@@ -20,12 +21,33 @@
             android:layout_alignParentTop="true" />
 
         <TextView
-            android:background="@color/transparent_white"
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/photo"
-            android:padding="@dimen/space_15" />
+            android:background="@color/transparent_white"
+            android:padding="@dimen/space_15"
+            android:text="Event Name" />
+
+        <TextView
+            android:id="@+id/page"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/name"
+            android:background="@color/transparent_white"
+            android:padding="@dimen/space_15"
+            android:text="Page" />
+
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/stamp"
+            fontPath="@string/masterplan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/space_15"
+            android:text="Stamp"
+            android:textSize="35sp"
+            tools:ignore="MissingPrefix" />
 
     </RelativeLayout>
 
